# globe_itw

./: .gitignore  README.md  README_archi_reprise_incident.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  schema.drawio
.github/workflows/: compile_workflow.yml  deploy.yml  deploy_docs.yml  deploy_prod.yml  deploy_staging.yml  dev_and_prod_workflow.yml
macros/: calculate_match_candidats.sql  calculate_match_score.sql  capture_transformation_log.sql  clean_store_name.sql  diagnose_match_failure.sql  drop_schema.sql  get_custom_schema.sql  suggest_match_action.sql
models/: source.yml
models/mart/: mart__stores_unified.sql  mart__view__unmatched_stores.sql  mart_view__matched_stores.sql  mart_view__unmatched_stores.sql  schema.yml
models/raw/: raw__gi_stores.sql  raw__th_stores.sql  raw__ti_stores.sql
models/staging/: schema.yml  stg__matchings_stores.sql  stg__stores_unified.sql
tests/: test_geohashes_duplicate.sql  validate_geohash_proximity.sql
